--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -8,5 +8,5 @@ kernel.o: kernel.c multiboot.h types.h x86_desc.h lib.h i8259.h debug.h \
   keyboard.h interrupt.h syscall.h rtc.h
 keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h x86_desc.h
 lib.o: lib.c lib.h types.h
-rtc.o: rtc.c rtc.h i8259.h types.h lib.h x86_desc.h
+rtc.o: rtc.c rtc.h types.h i8259.h lib.h x86_desc.h interrupt.h
 syscall.o: syscall.c syscall.h interrupt.h types.h
